<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>tvmd</name>
  <version>1.0.0</version>
  <description>
    The Team-System-Sim_description package
  </description>
  <maintainer email="sciyen@gmail.com">Yen-Cheng Chu</maintainer>
  <license>Apache License 2.0</license>

  <author>Yen-Cheng Chu</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>rospy</build_depend>
  <build_depend>px4_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
